--- a/package.json
+++ b/package.json
@@ -38,37 +38,37 @@
     "compression": "1.7.3",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
-    "cors": "2.8.4",
-    "express": "4.16.3",
+    "cors": "2.8.5",
+    "express": "4.16.4",
     "express-session": "1.15.6",
     "handlebars": "4.0.12",
     "i18n": "0.8.3",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "mime": "2.3.1",
     "mkdirp": "0.5.1",
     "moment": "2.22.2",
-    "morgan": "1.9.0",
+    "morgan": "1.9.1",
     "pluralize": "^7.0.0",
     "request": "2.88.0",
-    "sanitize-html": "1.18.5",
-    "sequelize": "4.38.0",
+    "sanitize-html": "1.19.1",
+    "sequelize": "4.41.0",
     "serve-favicon": "~2.5.0",
     "simple-hooks-callback": "1.0.0",
     "string": "3.3.3",
     "uuid": "^3.3.2",
-    "winston": "2.4.3"
+    "winston": "^2.4.3"
   },
   "devDependencies": {
     "chance": "^1.0.16",
     "express-mysql-session": "2.0.1",
     "istanbul": "0.4.5",
     "mocha": "5.2.0",
-    "mysql2": "^1.6.1",
+    "mysql2": "^1.6.3",
     "ncp": "^2.0.0",
-    "pg": "^7.4.3",
+    "pg": "^7.6.0",
     "pg-hstore": "^2.3.2",
     "rimraf": "2.6.2",
-    "sinon": "6.2.0",
+    "sinon": "7.1.1",
     "supertest": "3.3.0",
     "we-test-tools": "wejs/we-test-tools"
   },
