--- a/package.json
+++ b/package.json
@@ -33,41 +33,41 @@
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "2.6.3",
+    "async": "^3.1.0",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.4",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "express-session": "1.16.2",
-    "handlebars": "4.3.0",
+    "express-session": "1.17.0",
+    "handlebars": "4.5.3",
     "lodash": "4.17.15",
     "mime": "2.4.4",
     "mkdirp": "0.5.1",
     "moment": "2.24.0",
     "morgan": "1.9.1",
-    "pluralize": "^7.0.0",
+    "pluralize": "^8.0.0",
     "request": "2.88.0",
     "sanitize-html": "1.20.1",
     "sequelize": "4.44.3",
     "serve-favicon": "~2.5.0",
     "simple-hooks-callback": "1.0.0",
     "string": "3.3.3",
-    "uuid": "^3.3.2",
+    "uuid": "^3.3.3",
     "winston": "^2.4.3"
   },
   "devDependencies": {
-    "chance": "^1.0.18",
+    "chance": "^1.1.4",
     "connect-sqlite3": "^0.9.11",
     "express-mysql-session": "^2.1.0",
-    "mocha": "6.2.0",
-    "mysql2": "^1.6.5",
+    "mocha": "6.2.2",
+    "mysql2": "^2.1.0",
     "ncp": "^2.0.0",
-    "nyc": "^14.1.1",
-    "rimraf": "2.7.1",
-    "sinon": "7.4.2",
-    "sqlite3": "^4.0.9",
+    "nyc": "^15.0.0",
+    "rimraf": "3.0.0",
+    "sinon": "8.0.2",
+    "sqlite3": "^4.1.1",
     "supertest": "4.0.2",
     "we-test-tools": "wejs/we-test-tools"
   },
