--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "handlebars": "4.5.3",
+    "handlebars": "4.7.2",
     "lodash": "4.17.15",
     "mime": "2.4.4",
     "mkdirp": "0.5.1",
@@ -60,15 +60,15 @@
     "chance": "^1.1.4",
     "connect-sqlite3": "^0.9.11",
     "express-mysql-session": "^2.1.0",
-    "mocha": "6.2.2",
+    "mocha": "7.0.0",
     "mysql2": "^2.1.0",
     "ncp": "^2.0.0",
     "nyc": "^15.0.0",
     "rimraf": "3.0.0",
-    "sinon": "8.0.2",
+    "sinon": "8.0.4",
     "sqlite3": "^4.1.1",
     "supertest": "4.0.2",
-    "we-test-tools": "wejs/we-test-tools"
+    "we-test-tools": "github:wejs/we-test-tools"
   },
   "engines": {
     "node": ">=8.0.0"
