--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sequelize": "5.21.3",
     "serve-favicon": "~2.5.0",
     "simple-hooks-callback": "1.0.0",
+    "slugify": "^1.3.6",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
