--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "^3.1.0",
+    "async": "^3.1.1",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "connect-flash": "0.1.1",
@@ -41,15 +41,15 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "handlebars": "4.7.2",
+    "handlebars": "4.7.3",
     "lodash": "4.17.15",
     "mime": "2.4.4",
     "moment": "2.24.0",
     "morgan": "1.9.1",
     "pluralize": "^8.0.0",
-    "request": "2.88.0",
+    "request": "2.88.2",
     "sanitize-html": "1.21.1",
-    "sequelize": "5.21.3",
+    "sequelize": "5.21.4",
     "serve-favicon": "~2.5.0",
     "simple-hooks-callback": "1.0.0",
     "slugify": "^1.3.6",
@@ -59,11 +59,12 @@
   "devDependencies": {
     "chance": "^1.1.4",
     "connect-sqlite3": "^0.9.11",
-    "mocha": "7.0.0",
+    "mocha": "7.0.1",
+    "mysql2": "^2.1.0",
     "ncp": "^2.0.0",
     "nyc": "^15.0.0",
-    "rimraf": "3.0.0",
-    "sinon": "8.1.0",
+    "rimraf": "3.0.2",
+    "sinon": "8.1.1",
     "sqlite3": "^4.1.1",
     "supertest": "4.0.2",
     "we-test-tools": "^1.0.0"
